Modified Test Cases